Capture titles using numbers in series id like: 200GANA Use `Integer.value` over `new Integer`